2005-11-21 17:03  strk

	* source/: algorithm/CentroidArea.cpp, algorithm/ConvexHull.cpp,
	  algorithm/HCoordinate.cpp, algorithm/LineIntersector.cpp,
	  geom/Coordinate.cpp, geom/Geometry.cpp,
	  geom/GeometryCollection.cpp, geom/LineSegment.cpp,
	  geom/Polygon.cpp, geomgraph/DirectedEdgeStar.cpp,
	  geomgraph/EdgeEnd.cpp, geomgraph/EdgeEndStar.cpp,
	  geomgraph/Node.cpp, geomgraph/NodeFactory.cpp,
	  geomgraph/NodeMap.cpp, geomgraph/PlanarGraph.cpp,
	  geomgraph/index/SegmentIntersector.cpp, headers/geos/geom.h,
	  headers/geos/geomgraph.h, headers/geos/geosAlgorithm.h,
	  headers/geos/opOverlay.h, headers/geos/opRelate.h,
	  headers/geos/opValid.h, headers/geos/operation.h,
	  operation/GeometryGraphOperation.cpp, operation/IsSimpleOp.cpp,
	  operation/buffer/BufferBuilder.cpp,
	  operation/overlay/OverlayNodeFactory.cpp,
	  operation/overlay/OverlayOp.cpp,
	  operation/polygonize/PolygonizeGraph.cpp,
	  operation/relate/EdgeEndBuilder.cpp,
	  operation/relate/EdgeEndBundleStar.cpp,
	  operation/relate/RelateComputer.cpp,
	  operation/relate/RelateNode.cpp,
	  operation/relate/RelateNodeFactory.cpp,
	  operation/relate/RelateNodeGraph.cpp,
	  operation/relate/RelateOp.cpp,
	  operation/valid/ConnectedInteriorTester.cpp,
	  operation/valid/IsValidOp.cpp:
	  Coordinate interface change:	       Removed setCoordinate call,
	  use assignment operator	  instead. Provided a compile-time
	  switch to	    make copy ctor and assignment operators
	  non-inline	     to allow for more accurate profiling.

	  Coordinate copies removal:	     NodeFactory::createNode()
	  takes now a Coordinate reference	   rather then real value.
	  This brings coordinate copies 	in the testLeaksBig.xml
	  test from 654818 to 645991	     (tested in 2.1 branch). In the
	  head branch Coordinate	 copies are 222198.
	  Removed useless coordinate copies in ConvexHull
	  operations

	  STL containers heap allocations reduction:	     Converted many