@@ -1,3 +1,7 @@
+2006-01-30  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* source/algorithm/LineIntersector.cpp: Fixed debug messages.
+
 2005-11-21 17:03  strk
 
 	* source/: algorithm/CentroidArea.cpp, algorithm/ConvexHull.cpp,
